After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751951 - Descriptor for set_extents is missing an Integer Argument.
Descriptor for set_extents is missing an Integer Argument.
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
0.33.x
Other Mac OS
: Normal normal
: ---
Assigned To: Magdalen Berns (irc magpie)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-07-04 13:53 UTC by Magdalen Berns (irc magpie)
Modified: 2015-07-04 14:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
JNI: fix java descriptor for set_extents call (1.01 KB, patch)
2015-07-04 13:57 UTC, Magdalen Berns (irc magpie)
committed Details | Review
Update copyright for jawcomponent and AtkComponent (1.34 KB, patch)
2015-07-04 14:01 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-07-04 13:53:48 UTC
Running a check with the following command:

  javap -s -p  wrapper/org/GNOME/Accessibility/AtkComponent

Produces the following information about the set_extents java method descriptor:

  public java.awt.Rectangle set_extents(int, int, int, int, int);
    descriptor: (IIIII)Ljava/awt/Rectangle;

Where the descriptor currently being used is:

   (IIII)Ljava/awt/Rectangle;

Which is missing an "I"
Comment 1 Magdalen Berns (irc magpie) 2015-07-04 13:57:54 UTC
Created attachment 306809 [details] [review]
JNI: fix java descriptor for set_extents call
Comment 2 Magdalen Berns (irc magpie) 2015-07-04 14:01:53 UTC
Created attachment 306810 [details] [review]
Update copyright for jawcomponent and AtkComponent

The copyright needs updating.

Closing.