JNI: fix java descriptor for set_extents call

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=751951